feat: 使用PSScriptRoot作为基础目录，支持从任意位置运行脚本; 添加MappingFolder配置项

--- a/config.ini
+++ b/config.ini
@@ -30,8 +30,10 @@ RecordSize = 1300
 HeaderMarker = 1
 ; 数据记录标识符 / Data record marker
 DataMarker = 2
-; 映射文件路径 / Mapping file path
-MappingFile = mapping/mapping.csv
+; 映射文件夹 / Mapping folder
+MappingFolder = mapping
+; 映射文件名 / Mapping file name
+MappingFile = mapping.csv
 
 # ============================================
 # 电话号码字段配置 / Phone Field Configuration
