--- a/config_日本語.ini
+++ b/config_日本語.ini
@@ -29,8 +29,10 @@ RecordSize = 1300
 HeaderMarker = 1
 ; データレコード識別子
 DataMarker = 2
-; マッピングファイルのパス
-MappingFile = mapping/mapping.csv
+; マッピングフォルダ
+MappingFolder = mapping
+; マッピングファイル名
+MappingFile = mapping.csv
 
 # ============================================
 # 電話番号フィールド設定
