sync scripts, configs, and samples

--- a/config.ini
+++ b/config.ini
@@ -1,57 +1,55 @@
 # ============================================
-# DAT电话号码替换工具 - 配置文件
+# DAT電話番号置換ツール - 設定ファイル
 # DAT Phone Replacer - Configuration
 # ============================================
 #
-# 【模版/Template】
-# 复制下面的模版来添加新字段：
-# Copy the template below to add new fields:
+# 【テンプレート/Template】
+# 下記のテンプレートをコピーして新しいフィールドを追加してください：
 #
-# ; ========== 模版开始 / Template Start ==========
+# ; ========== テンプレート開始 ==========
 # [Phone-X]
-# ; 字段名称 / Field name
+# ; フィールド名
 # Name = Phone-X
-# ; 起始字节位置(从1开始) / Start byte position (1-indexed)
+# ; 開始文字位置(1から始まる)
 # StartByte = 100
-# ; 电话号码长度(字符数) / Phone number length (characters)
+# ; 電話番号の長さ(文字数)
 # Length = 10
-# ; ========== 模版结束 / Template End ==========
+# ; ========== テンプレート終了 ==========
 #
-# 【注意事项 / Notes】
-# - 字节位置从1开始计数 (1-indexed)
-# - 长度是字符数，BigEndianUnicode每字符占2字节
-# - 映射表放在 mapping/mapping.csv 文件中
+# 【注意事項】
+# - 文字位置は1から始まります (1-indexed)
+# - 長さは文字数、BigEndianUnicodeは各文字2バイト
+# - マッピングテーブルは mapping/mapping.csv に配置
 # ============================================
 
 [Settings]
-; 每条记录的字节数 / Bytes per record
+; 各レコードの文字数
 RecordSize = 1300
-; 头部记录标识符 / Header record marker
+; ヘッダーレコード識別子
 HeaderMarker = 1
-; 数据记录标识符 / Data record marker
+; データレコード識別子
 DataMarker = 2
-; 映射文件夹 / Mapping folder
+; マッピングフォルダ
 MappingFolder = mapping
-; 映射文件名 / Mapping file name
+; マッピングファイル名
 MappingFile = mapping.csv
 
 # ============================================
-# 电话号码字段配置 / Phone Field Configuration
+# 電話番号フィールド設定
 # ============================================
 
 [Phone-1]
 Name = Phone-1
-; 第100字节开始，长度10个字符
+; 第100文字から、長さ10文字
 StartByte = 100
 Length = 10
 
 [Phone-2]
 Name = Phone-2
-; 第200字节开始，长度10个字符
+; 第200文字から、長さ10文字
 StartByte = 200
 Length = 10
 
 # ============================================
-# 添加更多字段请在下方继续...
-# Add more fields below...
+# 以下に追加のフィールドを記述してください...
 # ============================================
